# img2c

./: .travis.yml  CMakeLists.txt  README.md
lib/: FindFreeImage.cmake
src/: img2c.cpp
